--- a/index.html
+++ b/index.html
@@ -485,4 +485,235 @@
       </section>
 
       
+ <!-- Contact Us-->
+      <section class="ln-section d-xl-flex bg-light" data-anchor="contact" data-tooltip="Contact" data-ui="dark" data-navbar="navbar-light">
+        <div class="container align-self-center">
+          <div class="row mb-7">
+            <div class="col-12 col-xl-6">
+              <h2 class="mb-4 animated" data-animation="fadeInUp">Contact Us</h2>
+              <p class="animated" data-animation="fadeInUp" data-animation-delay="150">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-lg-5 mb-8 mb-lg-0">
+              <div class="row">
 
+                <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 animated" data-animation="fadeInUp" data-animation-delay="150">
+                  <div class="icon-5x text-primary mb-4">
+                    <i class="ti-mobile"></i>
+                  </div>
+                  <p class="mb-0">(0091) 1111 1234567<br/>
+                  (084) 2222 1234567</p>
+                </div>
+
+                <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 animated" data-animation="fadeInUp" data-animation-delay="150">
+                  <div class="icon-5x text-primary mb-4">
+                    <i class="ti-location-pin"></i>
+                  </div>
+                  <p class="mb-0">69 Halsey St, New York, Ny 10002,<br/>
+                  United States</p>
+                </div>
+
+                <div class="col-12 col-md-4 col-lg-6 animated" data-animation="fadeInUp" data-animation-delay="150">
+                  <div class="icon-5x text-primary mb-4">
+                    <i class="ti-email"></i>
+                  </div>
+                  <p class="mb-0"><a href="mailto:support@example.com" class="text-dark">support@example.com</a><br/>
+                  <a href="mailto:hello@example.com" class="text-dark">hello@example.com</a></p>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-1 animated" data-animation="fadeInUp" data-animation-delay="150">
+              <div class="contact-form">
+                <form class="mb-0" id="cf" name="cf" action="include/sendemail.php" method="post" autocomplete="off">
+                  <div class="form-row">
+
+                    <div class="col-12 col-md-6">
+                      <div class="form-group">
+                        <input type="text" id="cf-name" name="cf-name" placeholder="Enter your name" class="form-control required">
+                      </div>
+                    </div>
+
+                    <div class="col-12 col-md-6">
+                      <div class="form-group">
+                        <input type="email" id="cf-email" name="cf-email" placeholder="Enter your email address" class="form-control required">
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <div class="form-group">
+                        <input type="text" id="cf-subject" name="cf-subject" placeholder="Subject (Optional)" class="form-control">
+                      </div>
+                    </div>
+
+                    <div class="col-12 mb-4">
+                      <div class="form-group">
+                        <textarea name="cf-message" id="cf-message" placeholder="Here goes your message" class="form-control required" rows="7"></textarea>
+                      </div>
+                    </div>
+
+                    <div class="col-12 d-none">
+                      <input type="text" id="cf-botcheck" name="cf-botcheck" value="">
+                    </div>
+
+                    <input type="hidden" name="prefix" value="cf-">
+
+                    <div class="col-12">
+                      <button class="btn btn-primary" type="submit" id="cf-submit" name="cf-submit">Send Message</button>
+                    </div>
+
+                  </div>
+                </form>
+                <div class="contact-form-result"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </div>
+
+  <!-- Footer -->
+    <footer class="position-relative py-10 py-lg-12 bg-dark text-gray-500">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-xl-12 col-xxl-10 mx-auto text-center">
+            <ul class="list-inline mb-5">
+              <li class="list-inline-item mx-0">
+                <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
+                  <i class="fab fa-facebook-f btn-icon-inner"></i>
+                </a>
+              </li>
+              <li class="list-inline-item mx-0">
+                <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
+                  <i class="fab fa-twitter btn-icon-inner"></i>
+                </a>
+              </li>
+              <li class="list-inline-item mx-0">
+                <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
+                  <i class="fab fa-linkedin-in btn-icon-inner"></i>
+                </a>
+              </li>
+              <li class="list-inline-item mx-0">
+                <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
+                  <i class="fab fa-dribbble btn-icon-inner"></i>
+                </a>
+              </li>
+            </ul>
+            <!--<p class="mb-0">© 2023 Lana - All Rights Reserved - <a href="#!" class="text-gray-400">Terms of Service</a></p> -->
+          </div>
+        </div>
+      </div>
+    </footer><!-- footer end -->
+
+    <!-- Fullpage - Social icons -->
+    <nav class="ln-social-icons">
+      <ul class="mx-auto">
+        <li><a href="https://note.com/machi_edu_623">
+          <!--<i class="fab fa-facebook-f"></i>-->
+          <img class="note" src="assets/images/icon_note.png"></a></li>
+
+        <!--
+        <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#!"><i class="fab fa-pinterest"></i></a></li>
+        -->
+       
+      </ul>
+    </nav>
+
+    <!-- Fullpage - Copyright -->
+    <div class="ln-copyright text-right">
+      <p>© 2023 Lana - All Rights Reserved - <a href="#!">Terms of Service</a></p>
+    </div>
+
+    <!-- Documentation Modal -->
+    <div class="modal fade" id="documentationModal" tabindex="-1" role="dialog" aria-labelledby="documentation" aria-hidden="true">
+      <div class="modal-dialog modal-md modal-dialog-centered" role="document">
+        <div class="modal-content hover-parent">
+
+          <!-- Button Close -->
+          <button type="button" class="btn btn-sm btn-icon btn-primary position-absolute top-0 right-0 mt-n3 mr-n3 zindex-1" data-dismiss="modal" aria-hidden="true">
+            <i class="fas fa-times btn-icon-inner"></i>
+          </button>
+
+          <!-- Modal Body -->
+          <div class="modal-body py-5 py-lg-8 px-5 px-lg-8 text-center">
+
+            <div class="icon icon-boxed icon-7x rounded bg-soft-primary text-primary mb-8">
+              <i class="ti-book"></i>
+            </div>
+            <h2 id="documentation" class="mb-3">Documentation</h2>
+            <p class="mb-8">This theme is easy to configure and comes witch a well documented help file, which will assist you in the configuration of your new website in few minutes.</p>
+
+            <!-- Button -->
+            <a class="btn btn-primary d-block d-lg-inline-block" href="!#">Buy theme</a>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+	<!-- Subscribe Modal -->
+    <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeNewsletter" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content hover-parent">
+
+          <!-- Button Close -->
+          <button type="button" class="btn btn-sm btn-icon btn-white position-absolute top-0 right-0 mt-n3 mr-n3 zindex-1" data-dismiss="modal" aria-hidden="true">
+            <i class="fas fa-times btn-icon-inner"></i>
+          </button>
+
+          <!-- Overlay -->
+          <div class="overlay overlay-advanced">
+            <div class="overlay-inner bg-cover" style="background-image: url('assets/images/image-12.jpg');"></div>
+            <div class="overlay-inner bg-primary opacity-70 hover-opacity-80"></div>
+            <div class="overlay-inner bg-gradient-v-transparent-dark opacity-90 hover-opacity-80"></div>
+          </div>
+
+          <!-- Modal Body -->
+          <div class="modal-body py-5 py-lg-8 px-5 px-lg-8 text-white text-center">
+
+            <h2 id="subscribeNewsletter" class="mb-4">Subscribe<br/> to our newsletter</h2>
+            <p class="mb-7 mb-lg-10">Signup for our weekly newsletter to get the latest news, updates and amazing offers delivered directly in your inbox.</p>
+            <div class="subscribe-form">
+              <form id="sf" name="sf" action="include/subscribe.php" method="post">
+                <div class="form-process"></div>
+                <div class="form-group">
+                  <input type="email" id="sf-email" name="sf-email" placeholder="Enter Your Email Address" class="form-control required">
+                </div>
+                <input type="text" id="sf-botcheck" name="sf-botcheck" value="" class="form-control d-none">
+                <button class="btn btn-soft-white btn-block" type="submit" id="sf-submit" name="sf-submit">Notify Me</button>
+              </form>
+              <div class="subscribe-form-result"></div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- Libs JS -->
+    <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="assets/vendor/popper.js/dist/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/vendor/fullPage.js/dist/scrolloverflow.min.js"></script>
+    <script src="assets/vendor/fullPage.js/dist/jquery.fullpage.min.js"></script>
+    <script src="assets/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/jquery-smooth-scroll/jquery.smooth-scroll.min.js"></script>
+    <script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="assets/vendor/jquery-form/dist/jquery.form.min.js"></script>
+    <script src="assets/vendor/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+    <script src="assets/vendor/jQuery.countdown/dist/jquery.countdown.min.js"></script>
+    <script src="assets/vendor/granim.js/dist/granim.min.js"></script>
+    <script src="assets/vendor/slick/slick.min.js"></script>
+    <script src="assets/vendor/vegas/vegas.min.js"></script>
+
+    <!-- Theme JS -->
+    <script src="assets/js/main.js"></script>
+
+  </body>
+</html>
