--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
                 神戸大学卒業。<br>
                 大手日用品メーカーに就職、27歳の時に独立。<br>
                 2018年10月学習塾「Minerva Academy」を設立。<br>
-                また、「マチコ先生のラジ勉！」などラジオパーソナリティとして活動。<br>
-                プライベートでは、中学生と１歳児を育てる母。</p>
+                また、「マチコ先生のラジ勉！」などラジオパーソナリティとして活動。</p>
             </div>
           </div>
 
