--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
             </div>
 
             <div class="col-12 col-lg-6 mb-8 animated font_size" data-animation="fadeInUp" data-animation-delay="750">
-              <h4>5. Personalized education</h4>
+              <h4>5. Graduate Certification Exam</h4>
               <p class="mb-0">高卒認定試験は文部科学省が実施する国家試験で、高校を卒業していない人が高校卒業者と同等の学力があるかどうかを認定する試験。
                 国公立、私立大学への入学資格が得られます。満16歳になる年度から受験ができるため、毎年夏に開催される試験に合格すれば、最速で16歳になる年度の夏に合格が可能。</p>
             </div>
 
             <div class="col-12 col-lg-6 mb-8 animated font_size" data-animation="fadeInUp" data-animation-delay="900">
-              <h4>6. Personalized education</h4>
+              <h4>6. Empowering Future Generations</h4>
               <p class="mb-0">AIを活用し効率の良い学習を行うことで、子どもたちにはゆとりのある時間が生まれます。
                 興味関心がある事柄に対して「とことん」取り組むことで、生きる力のある豊かな人材を育めると考えます。</p>
             </div>
