--- a/index.html
+++ b/index.html
@@ -294,29 +294,57 @@
       <section class="ln-section d-xl-flex bg-light" data-anchor="message" data-tooltip="Message" data-ui="dark" data-navbar="navbar-light">
         <div class="container align-self-xl-center">
 
-          <div class = "no-border-box">
-            <div class="col-12 col-xl-6 no-border-box">
-              <h2 class="mb-4 animated no-border-box" data-animation="fadeInUp" data-animation-delay="150">Message</h2>
-              <p class="animated font_size no-border-box message" data-animation="fadeInUp" data-animation-delay="150">今の子どもたちは忙しすぎませんか？<br>
-                学校、宿題、塾、習い事と慌ただしい毎日では、子どもたちの個性と創造性を十分に育めません。<br>
-                <br>
-                個性と創造性を育むには、自分の興味や才能を深く追求することが大切です。<br>そのためには、効率的に基礎学力を向上させる新しい教育アプローチとゆとりある時間が必要不可欠です。<br>
-                <br>
-                実は、私の子どもは学校に行っていません。現在、中学校1年生で、インターネットやAIを活用した自主学習を選択しています。<br>彼は自分のペースで学び、特に歴史に深い興味を持っています。時間を忘れて歴史書を読み漁り、今年は高校卒業レベルの歴史検定3級にチャレンジする予定です。同時に高校卒業認定試験の合格に向けて、頑張っているところです。<br>
-                <br>
-                また、私が7年間運営してきた学習塾では、子どもたち一人ひとりのニーズに合わせた柔軟な教育プログラムを提供しています。<br>このアプローチにより、多くの子どもたちが自分の興味を深く掘り下げる機会を得ています。<br>
-                具体的には、小学生で高校レベルの数学検定2級を取得する子や中学1年生で英語検定準２級を取得した子もいます。<br>
-                <br>
-                一方で、学校教育の限界を感じる場面が何度もありました。<br>画一的な指導や詰め込み教育が、子どもたちの創造性や個性の芽を摘んでしまっている可能性は否定できません。<br>
-                <br>
-                子どもたちが興味や才能を追求する時間と環境を持てれば、学ぶ意欲が高まり、自主性と創造性、個々の才能が開花します。<br>「自分の未来を切り開く力のある」子どもたちが増えれば、日本の社会はもっとより良くなるのではないでしょうか。<br>
-                <br>
-                従来の教育システムを見直し、個々の興味と才能を尊重する新しい教育アプローチを積極的に取り入れていく必要があります。<br>わたしたちの開発した新しい学習プログラムは、この理念を実現するための１つの解決策です。<br>
-                <br>
-                子どもたちが「学ぶことは楽しい」と感じながら成長し、生涯にわたって学び続ける姿勢を身につけて欲しい。また自分もそんな大人でありたい。<br>
-                そんな願いを込めて、この新しい学習プログラムを作りました。</p>
+	<!-- パソコンに表示する場合-->
+          <div class="for-pc">
+            <div class = "no-border-box">
+              <div class="col-12 col-xl-6 no-border-box">
+                <h2 class="mb-4 animated no-border-box" data-animation="fadeInUp" data-animation-delay="150">Message</h2>
+                <p class="animated font_size no-border-box message" data-animation="fadeInUp" data-animation-delay="150">今の子どもたちは忙しすぎませんか？<br>
+                  学校、宿題、塾、習い事と慌ただしい毎日では、子どもたちの個性と創造性を十分に育めません。<br>
+                  <br>
+                  個性と創造性を育むには、自分の興味や才能を深く追求することが大切です。<br>そのためには、効率的に基礎学力を向上させる新しい教育アプローチとゆとりある時間が必要不可欠です。<br>
+                  <br>
+                  実は、私の子どもは学校に行っていません。現在、中学校1年生で、インターネットやAIを活用した自主学習を選択しています。<br>彼は自分のペースで学び、特に歴史に深い興味を持っています。時間を忘れて歴史書を読み漁り、今年は高校卒業レベルの歴史検定3級にチャレンジする予定です。同時に高校卒業認定試験の合格に向けて、頑張っているところです。<br>
+                  <br>
+                  また、私が7年間運営してきた学習塾では、子どもたち一人ひとりのニーズに合わせた柔軟な教育プログラムを提供しています。<br>このアプローチにより、多くの子どもたちが自分の興味を深く掘り下げる機会を得ています。<br>
+                  具体的には、小学生で高校レベルの数学検定2級を取得する子や中学1年生で英語検定準２級を取得した子もいます。<br>
+                  <br>
+                  一方で、学校教育の限界を感じる場面が何度もありました。<br>画一的な指導や詰め込み教育が、子どもたちの創造性や個性の芽を摘んでしまっている可能性は否定できません。<br>
+                  <br>
+                  子どもたちが興味や才能を追求する時間と環境を持てれば、学ぶ意欲が高まり、自主性と創造性、個々の才能が開花します。<br>「自分の未来を切り開く力のある」子どもたちが増えれば、日本の社会はもっとより良くなるのではないでしょうか。<br>
+                  <br>
+                  従来の教育システムを見直し、個々の興味と才能を尊重する新しい教育アプローチを積極的に取り入れていく必要があります。<br>わたしたちの開発した新しい学習プログラムは、この理念を実現するための１つの解決策です。<br>
+                  <br>
+                  子どもたちが「学ぶことは楽しい」と感じながら成長し、生涯にわたって学び続ける姿勢を身につけて欲しい。また自分もそんな大人でありたい。<br>
+                  そんな願いを込めて、この新しい学習プログラムを作りました。</p>
+              </div>
             </div>
           </div>
+          <!-- スマホに表示する場合-->
+          <div class="for-sp">
+              <div class="col-12 col-xl-6">
+                <h2 class="mb-4 animated" data-animation="fadeInUp" data-animation-delay="150">Message</h2>
+                <p class="animated font_size" data-animation="fadeInUp" data-animation-delay="150">今の子どもたちは忙しすぎませんか？<br>
+                  学校、宿題、塾、習い事と慌ただしい毎日では、子どもたちの個性と創造性を十分に育めません。<br>
+                  <br>
+                  個性と創造性を育むには、自分の興味や才能を深く追求することが大切です。<br>そのためには、効率的に基礎学力を向上させる新しい教育アプローチとゆとりある時間が必要不可欠です。<br>
+                  <br>
+                  実は、私の子どもは学校に行っていません。現在、中学校1年生で、インターネットやAIを活用した自主学習を選択しています。<br>彼は自分のペースで学び、特に歴史に深い興味を持っています。時間を忘れて歴史書を読み漁り、今年は高校卒業レベルの歴史検定3級にチャレンジする予定です。同時に高校卒業認定試験の合格に向けて、頑張っているところです。<br>
+                  <br>
+                  また、私が7年間運営してきた学習塾では、子どもたち一人ひとりのニーズに合わせた柔軟な教育プログラムを提供しています。<br>このアプローチにより、多くの子どもたちが自分の興味を深く掘り下げる機会を得ています。<br>
+                  具体的には、小学生で高校レベルの数学検定2級を取得する子や中学1年生で英語検定準２級を取得した子もいます。<br>
+                  <br>
+                  一方で、学校教育の限界を感じる場面が何度もありました。<br>画一的な指導や詰め込み教育が、子どもたちの創造性や個性の芽を摘んでしまっている可能性は否定できません。<br>
+                  <br>
+                  子どもたちが興味や才能を追求する時間と環境を持てれば、学ぶ意欲が高まり、自主性と創造性、個々の才能が開花します。<br>「自分の未来を切り開く力のある」子どもたちが増えれば、日本の社会はもっとより良くなるのではないでしょうか。<br>
+                  <br>
+                  従来の教育システムを見直し、個々の興味と才能を尊重する新しい教育アプローチを積極的に取り入れていく必要があります。<br>わたしたちの開発した新しい学習プログラムは、この理念を実現するための１つの解決策です。<br>
+                  <br>
+                  子どもたちが「学ぶことは楽しい」と感じながら成長し、生涯にわたって学び続ける姿勢を身につけて欲しい。また自分もそんな大人でありたい。<br>
+                  そんな願いを込めて、この新しい学習プログラムを作りました。</p>
+              </div>
+          </div>
+          
 
         </div>
       </section>
