--- a/index.html
+++ b/index.html
@@ -601,17 +601,20 @@
 
     </div>
 
-  <!-- Footer -->
+ <!-- Footer -->
     <footer class="position-relative py-10 py-lg-12 bg-dark text-gray-500">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 col-xl-12 col-xxl-10 mx-auto text-center">
             <ul class="list-inline mb-5">
               <li class="list-inline-item mx-0">
-                <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
-                  <i class="fab fa-facebook-f btn-icon-inner"></i>
+                <a class="btn btn-icon btn-text-secondary text-gray-400" href="https://note.com/machi_edu_623" tabindex="0">
+                  <img class="note" src="assets/images/icon_note.png"></a></li>
+ 
+                 <!-- <i class="fab fa-facebook-f btn-icon-inner"></i> -->
                 </a>
               </li>
+              <!--
               <li class="list-inline-item mx-0">
                 <a class="btn btn-icon btn-text-secondary text-gray-400" href="#" tabindex="0">
                   <i class="fab fa-twitter btn-icon-inner"></i>
@@ -627,6 +630,7 @@
                   <i class="fab fa-dribbble btn-icon-inner"></i>
                 </a>
               </li>
+            -->
             </ul>
             <!--<p class="mb-0">© 2023 Lana - All Rights Reserved - <a href="#!" class="text-gray-400">Terms of Service</a></p> -->
           </div>
