--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
               <h2 class="animated mb-4" data-animation="fadeInUp">What we Do</h2>
               <p class="animated font_size" data-animation="fadeInUp" data-animation-delay="150">口中満智子教育研究所は、小学校4年生から中学校3年生向けの「オンライン学習プログラム」を提供しています。<br>
                 低価格で年間を通じて週5日間の指導が可能。<br>
-                AIを活用した数学・英語の自立学習を支援します。加えて京大生などによる個別サポートも行い、高卒認定試験の早期合格を目指します。自宅を中心に学習できるので、不登校や入院中、スポーツとの両立を目指す方、海外在住者など、様々な状況の学生をサポートします。</p>
+                AIを活用した数学・英語の自立学習を支援します。加えて京大生などによる個別サポートも行い、高卒認定試験の早期合格を目指します。自宅を中心に学習できるので、不登校や入院中、スポーツとの両立を目指す方、海外在住者など、様々な状況の学生をサポートします。<br><br>
+                ※高卒認定試験(旧大検)とは、文部科学省が実施する試験で、高校を卒業していない人が高校卒業者と同等の学力を持っているかどうかを認定するものです。高卒認定は、満16歳以上から受験可能で、合格すると、国・公・私立大学などへの受験ができます。</p>
             </div>
-            <div class="col-12 col-xl-6 offset-xl-1">
+             <!-- パソコン  -->
+            <div class="col-12 col-xl-6 offset-xl-1 for-pc">
               <div class="row">
 
                 <div class="col-md-6 col-sm-6 mb-8 animated" data-animation="fadeInUp">
@@ -210,8 +212,64 @@
 
               </div>
             </div>
-          </div>
 
+            <!-- すまほ -->
+            <div class="col-12 col-xl-6 offset-xl-1 for-sp">
+              <div class="row columns">
+
+                <div class="col-md-6 col-sm-6 mb-8 animated" data-animation="fadeInUp">
+                  <div class="icon-7x text-primary mb-4">
+                    <i class="ti-timer"></i>
+                  </div>
+                  <h3 class="h4 mb-0">Monday - Friday</h3>
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-8 animated" data-animation="fadeInUp" data-animation-delay="150">
+                  <div class="icon-7x text-primary mb-4">
+                    <!-- <i class="ti-brush-alt"></i> -->
+                    <!-- <img src="assets/images/PC.png"> -->
+                    <i class="fa-solid fa-laptop" style="color: #405be8;"></i>
+                  </div>
+                  <h3 class="h4 mb-0">Anywhere</h3>
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-8 animated" data-animation="fadeInUp" data-animation-delay="300">
+                  <div class="icon-7x text-primary mb-4">
+                    <i class="ti-book"></i>
+                  </div>
+                  <h3 class="h4 mb-0">Math and English</h3>
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-8 animated" data-animation="fadeInUp" data-animation-delay="450">
+                  <div class="icon-7x text-primary mb-4">
+                   <!-- <i class="ti-layers"></i> -->
+                   <img src="assets/images/AI.png">
+                  </div>
+                  <h3 class="h4 mb-0">AI</h3>
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-8 mb-sm-0 animated" data-animation="fadeInUp" data-animation-delay="600">
+                  <div class="icon-7x text-primary mb-4">
+                    <!-- <i class="ti-settings"></i> -->
+                    <i class="fa-solid fa-child-reaching" style="color: #405be8;"></i>
+                  </div>
+                  <h3 class="h4 mb-0">Fourth grade and  junior high school student</h3>
+                </div>
+
+                <div class="col-md-6 col-sm-6 animated" data-animation="fadeInUp" data-animation-delay="750">
+                  <div class="icon-7x text-primary mb-4">
+                   <!-- <i class="ti-headphone-alt"></i> -->
+                   <i class="fa-solid fa-hand-holding-dollar" style="color: #405be8;"></i>
+                  </div>
+                  <h3 class="h4 mb-0">Low price</h3>
+                  <p>¥9,800円～<br>
+                  母子家庭支援などもあり</p>
+                </div>
+
+              </div>
+            </div>          
+	  
+	  </div>
         </div>
       </section>
 
@@ -512,13 +570,18 @@
       </section>
 
       
- <!-- Contact Us-->
+<!-- Contact Us-->
       <section class="ln-section d-xl-flex bg-light" data-anchor="contact" data-tooltip="Contact" data-ui="dark" data-navbar="navbar-light">
         <div class="container align-self-center">
           <div class="row mb-7">
             <div class="col-12 col-xl-6">
               <h2 class="mb-4 animated" data-animation="fadeInUp">Contact Us</h2>
-              <p class="animated" data-animation="fadeInUp" data-animation-delay="150">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+              <p class="animated font_size" data-animation="fadeInUp" data-animation-delay="150">
+                詳細をお知りになりたい方は、zoomにてオンライン面談をさせて頂きます。<br>
+                下記フォームに必要事項を記載の上、お申し込み下さい。<br>
+                <a href="https://forms.gle/NQx334THRim1MLNS9">https://forms.gle/NQx334THRim1MLNS9</a>
+              </p>
+              
             </div>
           </div>
           <div class="row">
@@ -529,24 +592,21 @@
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile"></i>
                   </div>
-                  <p class="mb-0">(0091) 1111 1234567<br/>
-                  (084) 2222 1234567</p>
+                  <p class="mb-0">+81-90-6238-1623</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 animated" data-animation="fadeInUp" data-animation-delay="150">
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-location-pin"></i>
                   </div>
-                  <p class="mb-0">69 Halsey St, New York, Ny 10002,<br/>
-                  United States</p>
+                  <p class="mb-0">Utsunomiya-shi, Tochigi, Japan</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 animated" data-animation="fadeInUp" data-animation-delay="150">
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-email"></i>
                   </div>
-                  <p class="mb-0"><a href="mailto:support@example.com" class="text-dark">support@example.com</a><br/>
-                  <a href="mailto:hello@example.com" class="text-dark">hello@example.com</a></p>
+                  <p class="mb-0"><a href="mailto:machiko.kuchinaka@gmail.com" class="text-dark">machiko.kuchinaka@gmail.com</a></p>
                 </div>
 
               </div>
@@ -609,7 +669,7 @@
             <ul class="list-inline mb-5">
               <li class="list-inline-item mx-0">
                 <a class="btn btn-icon btn-text-secondary text-gray-400" href="https://note.com/machi_edu_623" tabindex="0">
-                  <img class="note" src="assets/images/icon_note.png"></a></li>
+                  <img class="note" src="assets/images/note_white.png"></a></li>
  
                  <!-- <i class="fab fa-facebook-f btn-icon-inner"></i> -->
                 </a>
