--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
             <ul class="list-inline mb-5">
               <li class="list-inline-item mx-0">
                 <a class="btn btn-icon btn-text-secondary text-gray-400" href="https://note.com/machi_edu_623" tabindex="0">
-                  <img class="note" src="assets/images/note_white.png"></a></li>
+                  <img class="note_icon" src="assets/images/note_white.png"></a></li>
  
                  <!-- <i class="fab fa-facebook-f btn-icon-inner"></i> -->
                 </a>
