--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
 
     <!-- Title -->
-    <title>Home | Lana - Creative Coming Soon Template</title>
+    <title>MKE</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/favicon.ico">
 
     <!-- Required Meta Tags -->
     <meta charset="utf-8">
@@ -155,7 +158,7 @@
               <p class="animated font_size" data-animation="fadeInUp" data-animation-delay="150">口中満智子教育研究所は、小学校4年生から中学校3年生向けの「オンライン学習プログラム」を提供しています。<br>
                 低価格で年間を通じて週5日間の指導が可能。<br>
                 AIを活用した数学・英語の自立学習を支援します。加えて京大生などによる個別サポートも行い、高卒認定試験の早期合格を目指します。自宅を中心に学習できるので、不登校や入院中、スポーツとの両立を目指す方、海外在住者など、様々な状況の学生をサポートします。<br><br>
-                ※高卒認定試験(旧大検)とは、文部科学省が実施する試験で、高校を卒業していない人が高校卒業者と同等の学力を持っているかどうかを認定するものです。高卒認定は、満16歳以上から受験可能で、合格すると、国・公・私立大学などへの受験ができます。</p>
+                ※高卒認定試験(旧大検)とは、文部科学省が実施する試験で、高校を卒業していない人が高校卒業者と同等の学力を持っているかどうかを認定するものです。高卒認定は、満16歳以上から受験可能。この試験に合格すると、国・公・私立大学などへの受験資格が得られます。</p>
             </div>
              <!-- パソコン  -->
             <div class="col-12 col-xl-6 offset-xl-1 for-pc">
@@ -579,7 +582,7 @@
               <p class="animated font_size" data-animation="fadeInUp" data-animation-delay="150">
                 詳細をお知りになりたい方は、zoomにてオンライン面談をさせて頂きます。<br>
                 下記フォームに必要事項を記載の上、お申し込み下さい。<br>
-                <a href="https://forms.gle/NQx334THRim1MLNS9">https://forms.gle/NQx334THRim1MLNS9</a>
+                <a href="https://forms.gle/MS4HTNafH6cFobgE9">https://forms.gle/MS4HTNafH6cFobgE9</a>
               </p>
               
             </div>
