--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Title -->
-    <title>MKE</title>
+    <title>口中真知子教育研究所</title>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.ico">
