--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Title -->
-    <title>口中真智子教育研究所</title>
+    <title>口中満智子教育研究所</title>
     <meta name=”description” content=”口中満智子教育研究所は、小学校4年生から中学校3年生向けの「オンライン学習プログラム」を提供しています。” />
 
     <!-- Favicon -->
