--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile"></i>
                   </div>
-                  <p class="mb-0">+81-90-6238-1623</p>
+                  <p class="mb-0">090-4251-0407</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 animated" data-animation="fadeInUp" data-animation-delay="150">
